[package]

name = "quire"
description = "A YAML-based configuration parsing library"
license = "MIT/Apache-2.0"
readme = "README.rst"
keywords = ["config", "yaml", "parser"]
homepage = "http://github.com/tailhook/rust-quire"
version = "0.2.3"
authors = ["paul@colomiets.name"]

[dependencies]
quick-error = "1.0.0"
humantime = "1.0.0"
num-traits = "0.1.36"
humannum = "0.1.0"
serde = "1.0.10"
serde_json = {version="1.0.0", optional=true}
regex = {version="0.2.2", optional=true}

[features]
json = ["serde_json"]
regex_expressions = ["regex"]
default = ["regex_expressions"]

[dev-dependencies]
serde_derive = "1.0.10"
