[package]

name = "quire"
description = "A YAML-based configuration parsing library"
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["config", "yaml", "parser"]
homepage = "http://github.com/tailhook/rust-quire"
categories = ["config"]
version = "0.3.1"
authors = ["paul@colomiets.name"]

[dependencies]
quick-error = "1.2.0"
num-traits = "0.1.36"
humannum = "0.1.0"
serde = "1.0.10"

[dev-dependencies]
serde_derive = "1.0.10"
serde_json = "1.0.2"
serde-transcode = "1.0.0"
